After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757665 - Patch : Dereferencing a possible NULL pointer in transform.c
Patch : Dereferencing a possible NULL pointer in transform.c
Status: RESOLVED FIXED
Product: libxslt
Classification: Platform
Component: general
1.1.x
Other Linux
: Normal normal
: ---
Assigned To: Daniel Veillard
libxml QA maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-06 06:42 UTC by mahendra.n
Modified: 2015-12-13 19:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file (1.51 KB, patch)
2015-11-06 06:42 UTC, mahendra.n
none Details | Review

Description mahendra.n 2015-11-06 06:42:14 UTC
Created attachment 314956 [details] [review]
Patch file

NULL check is missing on pointer before dereferencing it.
File : transform.c

Pointer 'copy' returned from function 'xsltAddChild' at transform.c:836 may be null, and it is dereferenced at transform.c:837 without null check.

there are similar multiple cases of null pointer dereferencing in transform.c

Please check attached patch.