Fix possible NULL pointer deref in xsltCopyTextString

Based on the patch by mahendra.n. First part of fix for bug #757665.

https://bugzilla.gnome.org/show_bug.cgi?id=757665